# engawa

./: .gitignore  CHANGELOG.md  CHANGELOG_engawa.md  Cargo.toml  Dockerfile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.config/: docker_example.yml  example.yml
.devcontainer/: cert.sh  compose.yml  devcontainer.json  devcontainer.yml
.github/workflows/: check-cherrypick-js-autogen.yml  check-spdx-license-id.yml  format.yml  get-api-diff.yml  lint.yml  on-release-created.yml  scorecard.yml  storybook.yml  test-backend.yml  test-cherrypick-js.yml  test-federation.yml  test-frontend.yml  test-production.yml
cli/: Cargo.toml
cli/src/: main.rs
cli/src/config/: server.rs
cli/src/util/: id.rs  vapid.rs
docs/: nginx.sample.conf
es/: Dockerfile  cert.sh  sudachi.json
locales/: en-US.yml  index.d.ts  ja-JP.yml  ja-KS.yml  ug-CN.yml
scripts/: clean-all.js  clean.js  dev.mjs
scripts/changelog-checker/: package-lock.json  package.json
