[workspace]
members = [
		"packages/cli",
		"packages/rs-shared",
]

[workspace.package]
version = "4.12.0-engawa20241011"
edition = "2021"

[workspace.dependencies]
async-trait = { version = "0.1.83" }
basen ={ version = "0.1.0", default-features = false }
bb8 = { version = "0.8.6" }
chrono ={ version = "0.4.38", default-features = false }
clap = { version = "4.5.17" }
clap_derive = { version = "4.5.13" }
serde = { version = "1.0.213", default-features = false }
serde_derive = { version = "1.0.214", default-features = false }
serde_yml ={ version = "0.0.12", default-features = false }
sea-orm = { version = "1.1.0", default-features = false }
redis = { version = "0.27.5", default-features = false }
rusty_ulid = { version = "2.0.0" }
tokio = { version = "1.41.0", default-features = false }
tracing ={ version = "0.1.40", default-features = false }
thiserror ={ version = "1.0.65", default-features = false }
url = { version = "2.5.2" }
urlencoding = { version = "2.1.3", default-features = false }
vapid ={ version = "0.6.0" }
once_cell = { version = "1.20.2" }
num-bigint = { version = "0.4.6", default-features = false }
