[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
clap_derive = "4.5.13"
nu-ansi-term = "0.49"
serde = "1.0.213"
serde_yml = "0.0.12"
tokio = { version = "1.41.0", features = ["full"] }
vapid = "0.6.0"
sea-orm = { version = "1.1.0", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono"] }
thiserror = "1.0.65"
chrono = "0.4.38"
meilisearch-sdk = "0.27.1"
relax = "0.1.0"
num-bigint = "0.4.6"
once_cell = "1.20.2"
url = "2.5.2"
